--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -199,7 +199,7 @@
      */
     function checkAuthBeforeAI() {
         Swal.fire({
-            title: '🔐 តំបន់សមាជិក VIP!',
+            title: '🔐 ឈប់សិនបងហា🤭',
             text: "សួស្តីអតិថិជនជាទីស្រឡាញ់! ដើម្បីប្រើប្រាស់បច្ចេកវិទ្យាមន្តអាគម AI និងរក្សាទុកប្រវត្តិនៃការសួរ (Archive) សូមមេត្តាភ្ជាប់គណនីរបស់ប្អូនជាមុនសិនណា🙏!",
             icon: 'info',
             showCancelButton: true,
